@@ -3,6 +3,7 @@ gnome-commander 1.2.5
 ---------------
 
 Bug fixes:
+ * Fixed problem #345314 (cursor not staying on file while renaming)
  * Fixed problem #353889 (disappearing files after failed move (F6))
  * Fixed problems #346286, #424447, #447882, #467058 (crash when using regex in renaming tool)
  * Fixed problems #365227 and #446361 (build issues on Solaris)
